--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+/* Global styles */
+
+.card {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    box-sizing: border-box;
+    margin: 5px 0;
+    background-color: #fff;
+    max-width: 530px;
+    transition: all 0.2 ease-in-out;
+    &:hover{
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.24);
+        cursor: pointer;
+    }
+    img{
+        opacity: 0.7;
+        width: 100%;
+        transition: opacity 0.7;
+        &:hover{
+            opacity: 1;
+        }
+    }
+    
+    .card-inner{
+        padding: 10px;
+    }
+}
