--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: rgb(140, 197, 171);">
 
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/">World Pics</a>
+      <a class="navbar-brand fs-3 me-5" routerLink="/">World Pics</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -9,10 +9,10 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
+            <a class="nav-link active border-2 border-light border-start ps-4" aria-current="page" routerLink="/">Home</a>
           </li>
         </ul>
-        <form class="d-flex">
+        <form class="d-flex" id="buscador">
           <input class="form-control me-2" type="search" placeholder="Fotos..." aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
