Funcionalidad de cargar imagenes desde API agregada, version funcional

--- a/src/app/components/pages/fotos/lista-fotos/lista-fotos.component.html
+++ b/src/app/components/pages/fotos/lista-fotos/lista-fotos.component.html
@@ -1,1 +1,50 @@
-<p>lista-fotos works!</p>
+<div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-4" *ngFor="let foto of fotos">
+        <!-- Todas las fotos -->
+        <div class="card">
+
+            <div class="content">
+                <a [routerLink]="['/foto-detalles', foto.id]">
+                  <div class="content-overlay"></div>
+                  <img [src]="foto.webformatURL" [alt]="foto.type" class="content-image">                  <div class="content-details fadeIn-bottom">
+                    <h3 class="content-title">This is a title</h3>
+                    <p class="content-text">This is a short description</p>
+                  </div>
+                </a>
+            </div>
+
+            <!-- <div class="image">
+                <a [routerLink]="['/foto-detalles', foto.id]">
+                    <img [src]="foto.webformatURL" [alt]="foto.type" class="card-img-top">
+                </a>
+            </div> -->
+            <div class="card-inner">
+                <div class="header">
+                    <a [routerLink]="['/foto-detalles', foto.id]">
+                        <h4># {{foto.tags}}</h4>
+                    </a>
+                    <h4 class="text-muted">Likes: {{foto.likes}}</h4>
+                    <small class="text-muted">Vistas: {{foto.views}}</small>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-12 mt-5 container-notFound"
+    *ngIf="fotos.length <= 0">
+       <p>Sin resultados...</p>
+    </div>
+</div>
+<button class="btn btn-dark">
+    Up 
+</button>
+
+<div class="content">
+    <a href="https://unsplash.com/photos/HkTMcmlMOUQ" target="_blank">
+      <div class="content-overlay"></div>
+      <img class="content-image" src="https://images.unsplash.com/photo-1433360405326-e50f909805b3?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=359e8e12304ffa04a38627a157fc3362">
+      <div class="content-details fadeIn-bottom">
+        <h3 class="content-title">This is a title</h3>
+        <p class="content-text">This is a short description</p>
+      </div>
+    </a>
+</div>
