--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -12,10 +12,7 @@
             <a class="nav-link active border-2 border-light border-start ps-4" aria-current="page" routerLink="/">Home</a>
           </li>
         </ul>
-        <form class="d-flex" id="buscador">
-          <input class="form-control me-2" type="search" placeholder="Fotos..." aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
-        </form>
+        <app-form-search></app-form-search>
       </div>
       
     </div>
