--- a/src/app/shared/components/form-search/form-search.component.html
+++ b/src/app/shared/components/form-search/form-search.component.html
@@ -5,8 +5,8 @@
     type="text"
     class="form-control me-2"
     placeholder="Fotos..."
-    (keyup) = "onSearch(inputSearch.value)"
+    (keydown.enter)="onSearch($event, inputSearch.value)"
     >
-    <button class="btn btn-outline-success" type="submit">Buscar</button>    
+    <button class="btn btn-outline-success" type="button" (click)="onSearch($event, inputSearch.value)">Buscar</button>    
 </form>
 
