--- a/src/app/components/pages/fotos/foto-detalles/foto-detalles.component.html
+++ b/src/app/components/pages/fotos/foto-detalles/foto-detalles.component.html
@@ -1,8 +1,8 @@
 <div class="row justify-content-center" >
-    <div class="col-xs-12 col-sm-6 col-md-6 justify-content-center" *ngFor="let foto of fotos">
+    <div class="col-xs-12 col-sm-6 col-md-6 justify-content-center">
         <!-- Todas las fotos -->
         <div class="card">
-
+            {{foto$ | async | json}}
             <div class="content">
                 <a>
                   <div class="content-overlay"></div>
