--- a/src/app/components/pages/fotos/foto-detalles/foto-detalles.component.html
+++ b/src/app/components/pages/fotos/foto-detalles/foto-detalles.component.html
@@ -1,24 +1,29 @@
 <div class="row justify-content-center" >
-    <div class="col-xs-12 col-sm-6 col-md-6 justify-content-center">
+    <div class="col-xs-12 col-sm-6 col-md- justify-content-center">
         <!-- Todas las fotos -->
         <div class="card">
-            <div class="content">
-                <a>
-                  <div class="content-overlay"></div>
-                  <img [src]="foto.webformatURL" [alt]="foto.type" class="content-image">                  <div class="content-details fadeIn-bottom">
-                    <p class="content-text"># {{foto.tags}}</p>
-                  </div>
-                </a>
-            </div>
+            <img [src]="foto.webformatURL" [alt]="foto.type" class="content-image">
+            
             <div class="card-inner">
                 <div class="header">
-                    <h4 class="text-muted">Likes: {{foto.likes}}</h4>
-                    <small class="text-muted">Vistas: {{foto.views}}</small>
+                    <div class="d-flex flex-row">
+                        <div class="me-auto">
+                            <div class="d-flex flex-row">
+                                <h5 class="text-body">Likes:</h5> <p class="ms-2 text-body">{{foto.likes}}</p>
+                            </div>
+                            <div class="d-flex flex-row">
+                                <h5 class="text-body">Vistas:</h5> <p class="ms-2 text-body">{{foto.views}}</p>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-row-reverse">
+                            <p id="tags" class="content-text"># {{foto.tags}}</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <button class="btn mt-3" (click)="GoBack()">
+            Back 
+        </button>
     </div>
 </div>
-<button class="btn btn-primary mt-3" (click)="GoBack()">
-    Back 
-</button>
